force-app/main/default/objects/Important_Date_or_Event__c/Important_Date_or_Event__c.object-meta.xml
<CustomObject>
    <label>Important Date or Event</label>
    <nameField>
        <label>Important Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Important Dates or Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>