force-app/main/default/objects/Important_Date_or_Event__c/fields/Account_related_to_the_dates__c.field-meta.xml
<CustomField>
    <fullName>Account_related_to_the_dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account related to the dates</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Important Dates or Events</relationshipLabel>
    <relationshipName>Important_Dates_or_Events</relationshipName>
    <type>Lookup</type>
</CustomField>