force-app/main/default/objects/Important_Date_or_Event__c/fields/Contact_on_object__c.field-meta.xml
<CustomField>
    <fullName>Contact_on_object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact on object</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Important Dates or Events</relationshipLabel>
    <relationshipName>Important_Dates_or_Events</relationshipName>
    <type>Lookup</type>
</CustomField>