force-app/main/default/objects/Important_Date_or_Event__c/fields/Images_Of_the_Memory__c.field-meta.xml
<CustomField>
    <fullName>Images_Of_the_Memory__c</fullName>
    <label>Images Of the Memory</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>