force-app/main/default/objects/Important_Date_or_Event__c/fields/In_case_you_remember_the_time__c.field-meta.xml
<CustomField>
    <fullName>In_case_you_remember_the_time__c</fullName>
    <label>In case you remember the time?</label>
    <type>Time</type>
</CustomField>