force-app/main/default/objects/Important_Date_or_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location?</label>
    <type>TextArea</type>
</CustomField>