force-app/main/default/objects/Important_Date_or_Event__c/fields/Memory_was_created_on__c.field-meta.xml
<CustomField>
    <fullName>Memory_was_created_on__c</fullName>
    <label>Memory was created on?</label>
    <required>true</required>
    <type>Date</type>
</CustomField>