force-app/main/default/objects/Important_Date_or_Event__c/fields/Special_mentioned_memory__c.field-meta.xml
<CustomField>
    <fullName>Special_mentioned_memory__c</fullName>
    <label>Special mentioned memory!</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>