force-app/main/default/objects/Important_Date_or_Event__c/fields/What_s_this_Memory_about__c.field-meta.xml
<CustomField>
    <fullName>What_s_this_Memory_about__c</fullName>
    <label>What&apos;s this Memory about?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>