force-app/main/default/objects/Important_Date_or_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Memory_was_created_on__c</columns>
    <columns>What_s_this_Memory_about__c</columns>
    <columns>Location__c</columns>
    <columns>Images_Of_the_Memory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>